# Blog

./: .gitignore  BD.drawio  Untitled Diagram.drawio  add article.drawio  deployment.drawio  main.py  pyproject.toml  use case.drawio
Blog/: .coverage  db.sqlite3
Blog/Blog/: settings.py
Blog/main/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
Blog/main/migrations/: 0001_initial.py  0002_auto_20201103_1544.py  0003_auto_20201105_1401.py  0004_auto_20201106_1410.py  0005_article_user_id.py  0006_comments.py  0007_auto_20201111_1507.py  0008_article_views.py
Blog/main/templates/main/: addfavorite.html  article.html  base.html  editpage.html  favoritearticle.html  index.html  login.html  register.html  search.html  signin.html
Blog/main/tests/: test_forms.py  test_models.py  test_url.py  tests_views.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
