[tool.poetry]
name = "blog-"
version = "0.1.0"
description = ""
authors = ["ptostopank <52743103+ptostopank@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
django-nose = "^1.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
